cargo-features = ["edition2024"]
[package]
# The name of the package. This is the name that `pip install` and `pip show` will use.
# It can be different from the module name. Here we use the same name for convinence.
name = "pypies"
version = "0.1.0"
edition = "2024"

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import pypies`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`
name = "pypies"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `test/`) will not be able
# to `use pypies;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version = "0.21.0", features = ["extension-module"]}
# pyo3_polars must match polars version (https://github.com/pola-rs/pyo3-polars/pull/84).
polars = {version="0.41.0", features = ["lazy","dtype-struct","csv"]}
pyo3-polars = {version="0.15.0"}
plotters = {version = "0.3.6", default-features = false, features = ["evcxr", "all_series", "all_elements"]}
colorous = {version="1.0.14"}
